# lama

./: lama.cabal
src/: Expr.hs  Main.hs  Parser.hs  Term.hs
