cabal-version:      2.4
name:               lama
version:            0.1.0.0

executable lama
    main-is:          Main.hs
    other-modules:    Term
                    , Parser
                    , Expr

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
